--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
 
+    //JWT
+    implementation 'com.auth0.android:auth0:2.7.0'
+
     //Internet
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
