--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
 
     //Dagger2
     implementation 'com.google.dagger:dagger:2.42'
+    implementation 'com.google.dagger:dagger-android:2.35.1'
+    implementation 'com.google.dagger:dagger-android-support:2.10'
     kapt 'com.google.dagger:dagger-compiler:2.40.1'
     implementation 'javax.inject:javax.inject:1'
 
