--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     //application modules
     implementation project(path: ':domain')
     implementation project(path: ':data')
+    implementation project(path: ':utilities')
 
     //Internet
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
