--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -37,6 +38,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    //Dagger2
+    implementation "com.google.dagger:dagger:2.42"
+    implementation "com.google.dagger:dagger-android:2.42"
+    implementation "com.google.dagger:dagger-android-support:2.42"
+    kapt "com.google.dagger:dagger-compiler:2.42"
+    kapt "com.google.dagger:dagger-android-processor:2.42"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     testImplementation 'junit:junit:4.13.2'
