--- a/data/build.gradle
+++ b/data/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.42"
     kapt "com.google.dagger:dagger-android-processor:2.42"
 
+    //Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+
     implementation 'androidx.core:core-ktx:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
